# Spectre

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: publish.yml
src/: app.css
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  linux.json  windows.json
src-tauri/sidecar/: spectre-sidecar-x86_64-unknown-linux-gnu
src-tauri/src/: lib.rs
src-tauri/src/types/: mod.rs  request.rs  response.rs  user_response.rs
src-tauri/src/web/: api_time.rs  cookies.rs  login.rs  mod.rs  vrc_avatar_list.rs  vrc_current_avatar.rs  vrc_favorites.rs  vrc_friends.rs  vrc_group.rs  vrc_instance.rs  vrc_notifications.rs  vrc_request.rs  vrc_user.rs  vrc_users.rs  vrc_world.rs
src/lib/: load-data.ts  log-redirect.ts  store.ts  svelte-stores.ts  update-friends.ts  utils.ts  websocket.ts
src/lib/components/: Favicon.svelte  Footer.svelte  Footer2.svelte  GameLogger.svelte  Header.svelte  Instance.svelte  InstanceStatic.svelte  Login.svelte  LoginHeader.svelte  ThemeSwitcher.svelte  Websocket.svelte  Websocket2.svelte
src/lib/components/cards/: BarCard.svelte  CalloutCard.svelte  EventsCard.svelte  FriendsCard.svelte  JoinableCard.svelte  TotalPlayerCard.svelte
src/lib/components/content/: Bars.svelte
src/lib/components/friends/: FriendCard.svelte  UserInfo.svelte
src/lib/components/gamelog/: LogUser.svelte  LogWorld.svelte
src/lib/components/me/: Bio.svelte  Json.svelte  OwnAvatar.svelte
src/lib/components/notifications/: NotificationPopover.svelte
src/lib/components/ui/card/: card-content.svelte  card-header.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-overlay.svelte
src/lib/gamelog/: gamelog-reader.ts  gamelog-sql.ts  gamelog-store.ts
src/lib/styles/: stars.css
src/lib/types/: extended-friend.ts  external-user.ts  favorite.ts  friend.ts  notification.ts  websocket-msg.ts  world.ts
src/lib/types/websocket/: websocket-friend-active.ts  websocket-friend-location.ts  websocket-friend-offline.ts  websocket-friend-online.ts  websocket-user.ts  websocket-world.ts
src/lib/utils/: cache-manager.ts  get-friend-by-instance.ts  get-friend-image.ts  get-global-count.ts  get-joinable-users.ts  get-online-users.ts  load-image.ts  theme-switcher.ts  updater.ts
src/lib/xsoverlay/: xsNotification.ts  xsObject.ts  xsocket.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/dash/: +page.svelte
src/routes/(app)/friends/: +page.svelte
src/routes/(app)/home/: +page.svelte
src/routes/(app)/instances/: +page.svelte
src/routes/(app)/log/: +page.svelte
src/routes/(app)/me/: +page.svelte
src/routes/(app)/notifications/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/(auth)/: +layout.svelte  +page.svelte
src/routes/dash/: +page.svelte
src/routes/friends/: +page.svelte
src/routes/home/: +page.svelte
src/routes/instances/: +page.svelte
src/routes/login/: +page.svelte
src/routes/me/: +page.svelte
src/routes/notifications/: +page.svelte
src/routes/settings/: +page.svelte
(+14 files in other folders)
