[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-log = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.2.0"
cookie = "0.18.1"
base64 = "0.22.1"
tauri-plugin-websocket = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-notification = "2.2.0"
