[package]
name = "Spectre"
version = "0.1.0"
description = "A lightweight friend manager for VRC"
authors = ["ANGELWARE"]
license = "GPLv3.0"
repository = "https://github.com/angelware-net/spectre"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-log = "2.5.0"
tauri-plugin-store = "2.2.1"
tauri-plugin-http = "2.4.4"
base64 = "0.22.1"
tauri-plugin-websocket = "2.3.1"
tauri-plugin-shell = "2.2.2"
tauri-plugin-notification = "2.2.3"
tauri-plugin-fs = "2.3.0"
tauri-plugin-os = "2.2.2"
tauri-plugin-process = "2.2.2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-sql = { version = "2.2.1", features = ["sqlite"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-updater = "2.8.1"
